fixed wrapping issue

--- a/CSS/resumestyle.css
+++ b/CSS/resumestyle.css
@@ -40,7 +40,7 @@ header a {
     padding: 1%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: stretch;
     align-items: stretch;
 }
